Fix CRT effect stopping on scroll
After I added the profile photo, the CRT overlay was cut off.

--- a/css/crt.css
+++ b/css/crt.css
@@ -177,7 +177,7 @@ DEALINGS IN THE SOFTWARE.
 .crt::before {
   content: " ";
   display: block;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
